# pmr

./: CMakeLists.txt  Doxyfile.in  README.md
include/pmr/: deque.h  forward_list.h  list.h  map.h  memory_resource.h  monotonic_buffer_resource.h  monotonic_buffer_resource.hpp  polymorphic_allocator.h  polymorphic_allocator.hpp  pool_options.h  regex.h  resource_adapter.h  resource_adapter.hpp  set.h  string.h  synchronized_pool_resource.h  unordered_map.h  unordered_set.h  unsynchronized_pool_resource.h  vector.h
include/pmr/detail/: memblocks.hpp
src/: CMakeLists.txt  memblocks.cpp  memory_resource.cpp  monotonic_buffer_resource.cpp  synchronized_pool_resource.cpp
test/: CMakeLists.txt  test_memory_resource.cpp  test_monotonic_buffer_resource.cpp  test_polymorphic_allocator.cpp  test_resource_adapter.cpp  tracking_memory_resource.h  tracking_memory_resource.hpp
