file(GLOB_RECURSE test_sources *.cpp)
set(test_BIN ${PROJECT_NAME}-unittests)
add_executable(${test_BIN} ${test_sources})

foreach(fpath ${test_sources})
    get_filename_component(tname ${fpath} NAME_WE)
    if(${tname} MATCHES "^test_")
        string(SUBSTRING ${tname} 5 -1 tdisplay)
        add_test(NAME ${tdisplay} COMMAND ${test_BIN} -\# [\#${tname}])
    endif()
endforeach()

target_link_libraries(${test_BIN} pmr)
include_directories(SYSTEM "${PROJECT_SOURCE_DIR}/thirdparty/include")
set_property(TARGET ${test_BIN} PROPERTY CXX_STANDARD 11)
add_compile_options(-Wall -Wpedantic -Wextra -Werror)
